# swallow

./: CMakeLists.txt  README.md
clangize/: Cargo.toml
clangize/src/: lib.rs
swallow/: Cargo.toml
swallow/src/: command_server.rs  lib.rs
swallow_client/: CMakeLists.txt
swallow_client/c/: swallow_client.c
swallow_client/rust/: Cargo.toml
swallow_client/rust/src/: lib.rs
