[package]
name = "swallow"
version = "0.1.0"

[lib]
name = "swallow"
path = "src/lib.rs"

[build-dependencies]
cmake = "0.1.29"

[dependencies]
failure = "0.1.1"
common_failures = "0.1.0"
bincode = "0.9.2"
log = "0.4.1"
serde_derive = "1.0.27"
serde = "1.0.27"
serde_json = "1.0.9"
regex = "0.2.5"
lazy_static = "1.0.0"
clangize = { path = "../clangize" }
structopt = "0.1.6"
structopt-derive = "0.1.6"
pretty_env_logger = "0.2.0"
