[package]
name = "swallow_client_rust"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]

[lib]
name = "swallow_client_rust"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.36"
failure = "0.1.1"
regex = "0.2.5"
failure_derive = "0.1.1"
log = "0.4.1"
pretty_env_logger = "0.2.0"
ipc-channel = "0.9.1"
bincode = "0.9.2"
serde_derive = "1.0.27"
serde = "1.0.27"
